fix miss aligned elements

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -361,7 +361,8 @@
 	align-items: center;
 	padding: 25px 30px 10px;
 	justify-content: space-between;
-	padding: 0 20px 0px;
+	padding: 0 16px 12px 16px;
+	margin-top: 2px;
 }
 
 header .calendar-navigation {
@@ -404,6 +405,7 @@ header .calendar-current-date {
 	display: flex;
 	text-align: center;
 	padding: 0;
+	margin: 12px 0;
 }
 
 .calendar-body .calendar-dates {
