--- a/public/css/windows.css
+++ b/public/css/windows.css
@@ -158,6 +158,7 @@
 	justify-content: space-between;
 	align-items: flex-start;
 	flex-flow: row;
+	margin-right: -1px;
 }
 
 .app-header > .app-controls div {
